[package]
name = "meteora-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_cpi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-spl = "0.29.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
dynamic-amm = { git = "https://github.com/Xitadel-Official/dynamic-amm-sdk", features = [
    "no-entrypoint",
    "cpi",
], rev = "edd1f56c8e589db8dbbbb37a6653fdd416799b3a" }
solana-program = "1.16.27"
