[package]
name = "meteora-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_cpi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build", "anchor-lang/idl-build"]

[dependencies]
anchor-spl = "0.31.0"
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
solana-program = "2.1.0"
switchboard-on-demand = "0.3.5"
rust_decimal = "1.36"
